--- a/components/header/Header.module.css
+++ b/components/header/Header.module.css
@@ -3,11 +3,11 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border-bottom: 1px solid grey;
-    max-width: 70%;
+    border-bottom: 1px solid #eeedf1;
+    max-width: 75%;
     /* max-width: 1280px; */
     margin:auto;
-    padding: 2rem;
+    padding: 1.5rem;
     /* border-bottom: 2px solid #000; */
   /* padding: 3rem; */
   }
@@ -15,7 +15,7 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    gap: 1rem;
+    gap: 2rem;
   
   }
   .nav ul,
@@ -24,11 +24,15 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    gap: 1rem;
+    gap: 2rem;
   }
   .nav ul,
   .profile ul{
     list-style-type:none;
+  }
+  .nav ul li{
+    color: #727474;
+    font-size: 1rem;
   }
   .avatar{
     width: 3rem;
