--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -99,6 +99,9 @@ a {
   color: inherit;
   text-decoration: none;
 }
+ul{
+  list-style: none;
+}
 
 @media (prefers-color-scheme: dark) {
   /* html {
