--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,42 +1,31 @@
-.list {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  flex-wrap: wrap;
-  list-style: none;
-  gap: 1rem;
-  margin-top: 20px;
-  width: 75%;
-}
 .productImage {
   width: 80px;
 }
 .section {
   display: grid;
   grid-template-columns: repeat(1, minmax(0, 1fr));
-  /* padding: 0px 20px; */
-  margin: 100px auto 0px;
 }
 
 .mainImage {
   width: 100%;
-  border-radius: 16px;
+  cursor: pointer;
 }
 
-.list li img {
-  width: 80px;
-  border-radius: 12px;
+.list {
+  display: none;
 }
 .selected {
   border: 3px #eb9651 solid;
   opacity: 0.8;
+}
+.default {
 }
 .productDetails {
   display: flex;
   justify-content: flex-start;
   flex-direction: column;
   align-items: flex-start;
-  /* padding:40px 20px; */
+  padding: 25px 20px 50px;
 }
 .subHeading {
   /* background-color: rgb(241 245 249); */
@@ -49,47 +38,156 @@
   font-weight: 700;
   /* display: inline-block; */
   /* box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1); */
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   /* border-radius: 4px; */
 }
-.heading{
-    color: rgb(15 23 42);
-    margin-bottom: 20px;
-    font-weight: 700;
-    font-size: 1.875rem; 
-    line-height: 2.25rem; 
+.heading {
+  color: rgb(15 23 42);
+  margin-bottom: 10px;
+  font-weight: 700;
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+.text {
+  color: rgb(71 85 105);
+  line-height: 1.625;
+  margin-bottom: 20px;
+}
+.amountSpan {
+  /* padding: 0.25rem 0; */
+  color: #fb923c;
+  /* margin: auto; */
+  padding: 2px 6px;
+  background-color: rgb(255 237 213);
+  /* text-transform: uppercase; */
+  letter-spacing: 0.025em;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  font-weight: 700;
+  text-align: center;
+  /* display: inline-block; */
+  border-radius: 4px;
+  box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  /* margin-bottom: 20px; */
+}
+.amount {
+  color: rgb(15 23 42);
+  font-size: 1.5rem;
+  line-height: 2rem;
+  font-weight: 700;
+}
+/* .productDetails ul{
+  list-style: none;
+} */
+.discount {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  color: rgb(71 85 105);
+}
+.amountAndPercentage {
+  display: flex;
+  /* flex-wrap: wrap; */
+  flex-direction: column;
 
+  justify-content: flex-start;
+  /* align-items: center; */
+  gap: 8px;
 }
-.text{
-    color: rgb(71 85 105);
-    line-height: 1.625;
-    margin-bottom: 20px;
+.amountAndPercentage ul {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
 }
-.amountSpan{
-    /* padding: 0.25rem 0; */
-    color: #fb923c;
-    /* margin: auto; */
-    /* padding: 4px 8px; */
-    background-color: rgb(255 237 213);;
-    /* text-transform: uppercase; */
-    letter-spacing: 0.025em;
-    font-size: 0.875rem;
-    line-height: 1.25rem;
-    font-weight: 700;
-    text-align: center;
-    /* display: inline-block; */
-    border-radius: 4px;
-    box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
-    /* margin-bottom: 20px; */
+.counterAndAdd {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  gap: 1rem;
+  width: 100%;
+  margin-top: 2.5rem;
 }
-.amount{
-    color: rgb(15 23 42);
-    font-size: 1.5rem; 
-    line-height: 2rem; 
-    font-weight: 700;
+.counterList {
+  display: flex;
+  justify-content: space-between;
+  /* flex-direction: row; */
+  align-items: center;
+  background-color: rgb(241 245 249);
+  padding: 1rem 1.5rem;
+  gap: 1rem;
+  box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  border-radius: 0.25rem;
+  font-weight: 700;
+  width: 100%;
 }
-
+.counterList li {
+  cursor: pointer;
+}
+.button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* box-shadow: 0 1px 3px 0 rgb(249 115 22), 0 1px 2px -1px rgb(249 115 22); */
+  border-radius: 0.5rem;
+  padding: 1.5rem 1rem;
+  background-color: rgb(249 115 22);
+  gap: 1rem;
+  outline: none;
+  border: none;
+  cursor: pointer;
+  color: #fff;
+  /* margin-bottom: 50px; */
+  font-weight: 700;
+  font-size: 1rem;
+  width: 100%;
+}
+.button:hover{
+  transition: all 2s;
+  background-color: rgb(234 88 12);
+}
+.mobileImageToggle {
+  position: relative;
+}
+.hideImageToggle{
+  display: none;
+}
+.mobileImageToggleList {
+ 
+}
+.mobileImageToggleLeftList,
+.mobileImageToggleRightList {
+  position: absolute;
+  border-radius: 50%;
+  background-color: #fff;
+  top: 50%;
+  padding: 0.875rem 1rem;
+  cursor: pointer;
+  transform: translateY(50%);
+  outline: none;
+  border: none;
+}
+/* .imageButton{
+ background-color: transparent;
+ outline: none;
+ border: none;
+} */
+.mobileImageToggleLeftList {
+  left: 1rem;
+}
+.mobileImageToggleRightList {
+  right: 1rem;
+}
+.mobileImageToggle ul {
+}
+.desktopSlide{
+  display:none;
+}
 @media (min-width: 768px) {
+  .mobileSlide{
+    display:none;
+  }
+  .desktopSlide{
+    display:block;
+  }
   .section {
     display: grid;
     grid-template-columns: repeat(2, minmax(0, 1fr));
@@ -103,18 +201,62 @@
     width: 80%;
     /* border-radius: 16px; */
   }
-  .heading{
-    font-size: 2.25rem; 
-line-height: 2.5rem; 
+  .heading {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+  .counterAndAdd {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    /* gap: 1rem;  */
+    /* width: 100%; */
   }
 }
 @media (min-width: 1024px) {
   .section {
     padding: 0px 130px;
+    margin: 100px auto 0px;
+    place-items: center;
   }
-  .heading{
-    font-size: 3rem; 
-    line-height: 1;
 
-}
+  .heading {
+    font-size: 3rem;
+    line-height: 1;
+  }
+  .counterList {
+    width: 40%;
+    padding: 1rem;
+  }
+  .button {
+    padding: 1rem;
+    /* width: 100%; */
+  }
+  .mainImage {
+    border-radius: 16px;
+  }
+  .productDetails {
+    padding: 25px 30px 50px;
+  }
+  .list {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-wrap: wrap;
+    /* list-style: none; */
+    gap: 1rem;
+    margin-top: 20px;
+    width: 75%;
+  }
+  .list li img {
+    width: 80px;
+    border-radius: 12px;
+  }
+  .subHeading,
+  .heading {
+    margin-bottom: 20px;
+  }
+  .mobileList{
+    display: none;
+  }
 }
