--- a/components/lightBox/LightBox.module.css
+++ b/components/lightBox/LightBox.module.css
@@ -1,12 +1,30 @@
 .main {
-  position: fixed;
+  /* position: fixed;
   left: 0;
   right: 0;
   bottom: 0;
   top: 0;
   background-color: #000;
+  z-index: 100; */
+  /* opacity: 0.75; */
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  /* background-color: #000; */
   z-index: 100;
-  opacity: 0.75;
+  /* opacity: 0.75; */
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 1000;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  /* -webkit-transform: scale(1); */
+  /* -moz-transform: scale(1); */
+  /* transform: scale(1); */
+  /* opacity: 1; */
 }
 .section {
   display: flex;
@@ -22,45 +40,85 @@
 }
 .mainImage {
   width: 100%;
-
   border-radius: 16px;
+  position: relative;
 }
 
-.mobileImageToggleLeftList,
-.mobileImageToggleRightList {
-  position: absolute;
-  border-radius: 50%;
-  background-color: #fff;
-  top: 50%;
-  padding: 0.875rem 1rem;
-  cursor: pointer;
-  transform: translateY(50%);
-  outline: none;
-  border: none;
-}
+/*  */
 
-.mobileImageToggleLeftList {
+/* .mobileImageToggleLeftList {
   left: 1rem;
 }
 .mobileImageToggleRightList {
   right: 1rem;
-}
+} */
 .lightButtonImage {
-  position: absolute;
-  top: 40px;
-  right: 40px;
-  width: 40px;
+
+  width: 30px;
 }
 .lightBoxButton {
-    background: transparent;
-    /* color: transparent; */
-    outline: none;
-    border: none;
+  top: -20%;
+    position: absolute;
+    right: 0;
+    /* width: 50px; */
+  background: transparent;
+  /* top: 50px; */
+  /* right: 30px; */
+  /* color: transparent; */
+  outline: none;
+  border: none;
+}
+.list {
+  display: none;
+}
+.selected {
+  border: 3px #eb9651 solid;
+  opacity: 0.8;
+}
+.default {
 }
 
 @media (min-width: 768px) {
   .mainImage {
     /* width: 100%; */
-    height: 900px;
+    height: 500px;
+  }
+  .list {
+    gap: 2rem;
+  }
+}
+@media (min-width: 1024px) {
+  .mobileImageToggleLeftList,
+  .mobileImageToggleRightList {
+    position: absolute;
+    border-radius: 50%;
+    background-color: #fff;
+    top: 40%;
+    padding: 0.875rem 1rem;
+    cursor: pointer;
+    outline: none;
+    border: none;
+  }
+
+  .mobileImageToggleLeftList {
+    left: -1.5rem;
+  }
+  .mobileImageToggleRightList {
+    right: -1.5rem;
+  }
+
+  .list {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-wrap: wrap;
+    /* list-style: none; */
+    gap: 1rem;
+    margin-top: 20px;
+    width: 75%;
+  }
+  .list li img {
+    width: 80px;
+    border-radius: 12px;
   }
 }
