--- a/components/navbar/Navbar.module.css
+++ b/components/navbar/Navbar.module.css
@@ -1,76 +1,62 @@
+.header {
+  display: none;
+}
+.sub_header {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 2rem;
+}
 
-  .header{
-    display: none;
+.profile {
+  position: relative;
+}
+
+.profile ul {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 1rem;
+}
+
+.avatar {
+  width: 2rem;
+}
+
+.cartIcon {
+  cursor: pointer;
+}
+@media (min-width: 1024px) {
+  .header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid #eeedf1;
+    max-width: 75%;
+    margin: auto;
+    padding: 1.5rem;
   }
-  .sub_header {
+  .nav ul {
     display: flex;
     justify-content: flex-start;
     align-items: center;
     gap: 2rem;
   }
-  /* .nav {
-    display: none;
-  } */
- 
-  
-  .profile ul {
+
+  .nav ul li {
+    color: #727474;
+    font-size: 1rem;
+  }
+  .brandLogo {
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    gap: 1rem;
+    gap: 2rem;
   }
-  /* .brandLogo {
-    display: none;
-  } */
-
-  /* .profile ul {
-    list-style-type: none;
-  } */
-  /* .nav ul li{
-      color: #727474;
-      font-size: 1rem;
-    } */
   .avatar {
-    width: 2rem;
+    width: 3rem;
   }
-  /* .profile .button {
-    cursor: pointer;
-    outline: none;
+  .profile ul {
+    gap: 2rem;
   }
-   */
-  @media (min-width: 1024px) {
-    .header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      border-bottom: 1px solid #eeedf1;
-      max-width: 75%;
-      margin: auto;
-      padding: 1.5rem;
-    
-    }
-    .nav ul {
-      display: flex;
-      justify-content: flex-start;
-      align-items: center;
-      gap: 2rem;
-    }
-  
-    .nav ul li {
-      color: #727474;
-      font-size: 1rem;
-    }
-    .brandLogo {
-      display: flex;
-      justify-content: flex-start;
-      align-items: center;
-      gap: 2rem;
-    }
-    .avatar {
-      width: 3rem;
-    }
-    .profile ul {
-      gap: 2rem;
-    }
-  }
-  
+}
