--- a/components/mobileNavbar/MobileNavbar.module.css
+++ b/components/mobileNavbar/MobileNavbar.module.css
@@ -55,6 +55,7 @@
   cursor: pointer;
   font-size: 1.125rem;
   line-height: 1.75rem;
+  cursor: pointer;
 }
 
 .mobileBrandLogo {
@@ -66,6 +67,7 @@
 
 .avatar {
   width: 2rem;
+  cursor: pointer;
 }
 
 @media (min-width: 1024px) {
