--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -19,6 +19,7 @@
   opacity: 0.8;
 }
 .default {
+  cursor: pointer;
 }
 .productDetails {
   display: flex;
@@ -52,7 +53,7 @@
 .amountSpan {
   color: #fb923c;
   padding: 2px 6px;
-  background-color: rgb(255 237 213);
+  background-color: #feefe2;
   letter-spacing: 0.025em;
   font-size: 0.875rem;
   line-height: 1.25rem;
@@ -95,7 +96,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: rgb(241 245 249);
+  background-color: #f7f8fd;
   padding: 1rem 1.5rem;
   gap: 1rem;
   box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
