--- a/src/components/cart/Cart.module.css
+++ b/src/components/cart/Cart.module.css
@@ -3,6 +3,7 @@
   right: 10px;
   left: 10px;
   top: 95px;
+  min-width: 350px;
   background-color: #fff;
   z-index: 120;
   padding: 2rem 1.5rem;
@@ -28,6 +29,7 @@
   font-weight: 700;
   font-size: 1rem;
   width: 100%;
+  margin-top: 30px;
 }
 .button:hover {
   transition: all 2s;
@@ -51,9 +53,13 @@
   width: 60px;
   border-radius: 6px;
 }
+.empty{
+  padding: 20px;
+}
 @media (min-width: 1024px) {
   .button {
     padding: 1rem;
+   
   }
   .main {
     left: auto;
