--- a/src/components/navbar/Navbar.module.css
+++ b/src/components/navbar/Navbar.module.css
@@ -1,6 +1,10 @@
 .header {
   display: none;
 }
+.profileImage{
+  border: 3px hsl(26, 100%, 55%) solid;
+  border-radius: 50%;
+}
 .sub_header {
   display: flex;
   justify-content: flex-start;
@@ -45,7 +49,7 @@
   }
 
   .navItem {
-    color: #727474;
+    color: hsl(219, 9%, 45%);
     font-size: 1rem;
     position: relative;
     cursor: pointer;
@@ -58,7 +62,7 @@
     top: 3.4rem;
     left: 0;
     width: 0%;
-    background: rgb(234 88 12);
+    background: hsl(26, 100%, 55%);
     -o-transition: 0.5s;
     -ms-transition: 0.5s;
     -moz-transition: 0.5s;
@@ -69,7 +73,7 @@
   .navItem:hover:after,
   .navItem:hover:after {
     width: 100%;
-    background:rgb(234 88 12);
+    background:hsl(26, 100%, 55%);
   }
   .brandLogo {
     display: flex;
