--- a/src/components/cart/Cart.module.css
+++ b/src/components/cart/Cart.module.css
@@ -13,7 +13,7 @@
 }
 .title {
   text-align: left;
-  border-bottom: 1px solid rgb(148 163 184);
+  border-bottom: 1px solid hsl(220, 14%, 75%);
   font-weight: 700;
   padding: 0 0 1.7rem 0;
 }
