--- a/src/components/mobileNavbar/MobileNavbar.module.css
+++ b/src/components/mobileNavbar/MobileNavbar.module.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border-bottom: 1px solid #eeedf1;
+  border-bottom: 1px solid hsl(220, 14%, 75%);
   max-width: 100%;
   margin: auto;
   padding: 1.5rem;
