gave the cart text a font size

--- a/src/components/cart/Cart.module.css
+++ b/src/components/cart/Cart.module.css
@@ -57,6 +57,8 @@
   text-align: center;
   padding: 60px 0px;
   font-weight: 700;
+  color: hsl(220, 14%, 75%);
+  font-size: 1rem;
 }
 @media (min-width: 1024px) {
   .button {
