--- a/src/components/cart/Cart.module.css
+++ b/src/components/cart/Cart.module.css
@@ -6,7 +6,7 @@
   min-width: 350px;
   background-color: #fff;
   z-index: 120;
-  padding: 2rem 1.5rem;
+  padding:1.5rem;
   box-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
   border-radius: 8px;
   transition: all 0.5s ease;
@@ -15,7 +15,7 @@
   text-align: left;
   border-bottom: 1px solid hsl(220, 14%, 75%);
   font-weight: 700;
-  padding: 0 0 1.7rem 0;
+  padding: 0 0 1.5rem 0;
   font-size: 1rem;
 }
 .button {
