--- a/src/components/navbar/Navbar.module.css
+++ b/src/components/navbar/Navbar.module.css
@@ -1,11 +1,20 @@
 .header {
   display: none;
 }
-
+.cartIcon {
+position: relative;
+}
+/* .totalCartItems{
+  position: absolute;
+  bottom: 20px;
+  left: 20px;
+  background-color: hsl(26, 100%, 55%);
+  border-radius: 50%;
+  padding: 1px 5px;
+  color: #fff;
+} */
 @media (min-width: 1024px) {
-  .cartIcon {
-    cursor: pointer;
-  }
+
   .profile {
     position: relative;
   }
